# oai-cc-hc

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/command-center/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/command-center/src/: App.test.tsx  App.tsx  MissionTheater.tsx  api.test.ts  api.ts  (+7 more)
apps/worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
data/fixtures/: golden_mission.json
docs/: architecture.md  deployment.md  subagent-workflow.md  training.md
modal_apps/: __init__.py  common.py  evaluate.py  inference.py  perception_train.py  prepare_data.py  rl_train.py
notebooks/: terramind_s1_finetune.py  uav_detector_finetune.py
proof/: README.md  cloudflare_deploy_evidence.json  data_prep_medium.json  live_deploy_check.json  live_endpoint_check.txt  live_health.json  live_models.json  live_policy_proposal.json  live_proof.json  perception_eval_medium.json  release_gate_medium.json  rl_eval_medium.json
scripts/: capture_submission_evidence.ps1  check_live_deploy.ps1  deploy_cloudflare_demo.ps1  evaluate_demo.py  run_modal_proof.ps1  verify.ps1
src/rescue_swarm/: __init__.py
tests/: __init__.py
tests/advisors/: test_services.py
tests/api/: __init__.py  conftest.py  test_app.py  test_websocket.py
tests/contracts/: test_models.py
tests/data/: test_registry.py  test_splits.py
tests/evaluation/: test_metrics.py
tests/eventlog/: test_store.py
tests/learning/: test_config.py
tests/ml/: test_modal_entrypoints.py  test_perception_training.py  test_ppo_training.py  test_proof.py
tests/perception/: test_manifest.py  test_projection.py  test_rl_adapter.py  test_training_notebooks.py
tests/safety/: test_shield.py
tests/sim/: test_environment.py
(+32 files in other folders)
