[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flood-rescue-swarm"
version = "0.1.0"
description = "Simulation-only hierarchical MARL flood-rescue swarm demonstrator"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.11,<1",
]
ml = [
  "gymnasium==1.2.2",
  "numpy>=2.1,<3",
  "pettingzoo==1.26.1",
  "ray[rllib]==2.55.1",
  "torch>=2.6",
  "wandb>=0.19,<1",
]
perception = [
  "terratorch==1.2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rescue_swarm"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

